Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/neg/Z4.out
Z4.java:13:32: compiler.err.cant.resolve.location: kindname.variable, teal, , , (compiler.misc.location: kindname.class, Color, null)
1 error
